# Rocky

./: .gitignore  README.md  pyproject.toml  run.py
configs/: config.json  template.json
src/rocky/: __init__.py  config.py  exporters.py  geometry.py  layers.py  mesh.py  pipeline.py  preview.py  report.py
tests/: test_generation.py
